<option value="13">крокодил</option>

--- a/lp/дз.html
+++ b/lp/дз.html
@@ -28,6 +28,15 @@
         <input type="text" name="first_name" id="first_name">
         <input type="text" name="second_name" id="last_name" readonly>
     </form>
+    <form action="../result.html">
+        <select name="" id="">
+            <option value="12">12</option>
+            <option value="13">13</option>
+            <option value="13">крокодил</option>
+            <option value="13">крокодил</option>
+            
+        </select>
+    </form>
     <script>
         document.getElementById("password1").addEventListener("blur",()=>{
         let password1=document.getElementById("password2").value
