--- a/lp/дз.html
+++ b/lp/дз.html
@@ -29,12 +29,15 @@
         <input type="text" name="second_name" id="last_name" readonly>
     </form>
     <form action="../result.html">
+        ваш возраст
         <select name="" id="">
             <option value="12">12</option>
             <option value="13">13</option>
-            <option value="13">крокодил</option>
-            <option value="13">крокодил</option>
-            
+            <option value="14">14</option>
+            <option value="15">15</option>
+            <option value="16">16</option>
+            <option value="17">17</option>
+            <option value="18">18</option>
         </select>
     </form>
     <script>
