--- a/lp/дз.html
+++ b/lp/дз.html
@@ -29,7 +29,8 @@
         <input type="text" name="second_name" id="last_name" readonly>
     </form>
     <form action="../result.html">
-        ваш возраст
+        ваш возраст и имя
+        <input type="text" placeholder="имя">
         <select name="" id="">
             <option value="12">12</option>
             <option value="13">13</option>
@@ -39,6 +40,7 @@
             <option value="17">17</option>
             <option value="18">18</option>
         </select>
+        <button>send</button>
     </form>
     <script>
         document.getElementById("password1").addEventListener("blur",()=>{
