--- a/lp/дз.html
+++ b/lp/дз.html
@@ -31,9 +31,7 @@
     <form action="../result.html">
         ваш возраст и имя
         <input type="text" placeholder="имя">
-        <select name="" id="">
-            <option value="12">12</option>
-            <option value="13">13</option>
+        <select name="возраст" id="form_age_name">
             <option value="14">14</option>
             <option value="15">15</option>
             <option value="16">16</option>
