--- a/lp/дз.html
+++ b/lp/дз.html
@@ -32,6 +32,8 @@
         ваш возраст и имя
         <input type="text" placeholder="имя">
         <select name="возраст" id="form_age_name">
+            <option value="12">12</option>
+            <option value="13">13</option>
             <option value="14">14</option>
             <option value="15">15</option>
             <option value="16">16</option>
